# flowkit-ui-backend

./: .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .spectral.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  constraints.in  dev-requirements.in  dev-requirements.txt  development_env  docker-compose-mysql.yml  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.circleci/: config.yml  config.yml.last
alembic/: env.py  local_credentials
alembic/versions/: 29cf8dc726d7_set_srid_trid.py  3b1f5ed43c14_base.py
flowkit_ui_backend/: __init__.py  main.py  security_api.py
flowkit_ui_backend/apis/: accounts_api.py  data_api.py  general_api.py  maintenance_api.py
flowkit_ui_backend/db/: const_data.py  const_data.sql  db.py  mysql_schema.sql
flowkit_ui_backend/impl/: accounts_api_impl.py  data_api_impl.py  general_api_impl.py  maintenance_api_impl.py
flowkit_ui_backend/models/: bin.py  category.py  (+27 more)
jupyter/: DebugAPI.ipynb  PopulateDatabase.ipynb
resources/: invalid.csv  mysql.cnf  residents_indicators_people.csv
schema/: README.md
src/: .coveragerc  api.json  conftest.py  stash.Dockerfile
tests/: accounts_api_impl_test.py  conftest.py  data_api_impl_test.py  db_test.py  general_api_impl_test.py  maintenance_api_impl_test.py  test_accounts_api.py  test_accounts_api_impl.py  test_data.sql  test_data_api.py  test_data_api_impl.py  test_db.py  test_general_api.py  test_general_api_impl.py  test_maintenance_api.py  test_maintenance_api_impl.py  test_scope_mappings.py  test_util.py  util_test.py
(+79 files in other folders)
