[metadata]
name = flowkit_ui_backend
version = 1.3.0
description = A REST API for managing and postprocessing Flowkit data
long_description = file: README.md
keywords = OpenAPI FlowKitUI Backend
python_requires = >= 3.8.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
